Add Sportradar endpoints and dtos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=vinnie
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+#SportRadar endpoints
+sportradar.baseurl=http://api.sportradar.us/nfl/official/trial/v6/en
+sportradar.schedule.api=/games/2021/REG/schedule.json
+sportradar.roster.api=/teams/:team_id/full_roster.json
+sportradar.teams.api=/league/hierarchy.json
+sportradar.apiKey=crrpavefgyqppnd6jrvpfr7h
