--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://fantasy.cqkuioum3e1f.us-east-1.rds.amazonaws.com:5432/fantasy
+spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,6 +9,9 @@ sportradar.schedule.api=/games/2022/REG/schedule.json
 sportradar.roster.api=/teams/:team_id/full_roster.json
 sportradar.teams.api=/league/hierarchy.json
 sportradar.apiKey=crrpavefgyqppnd6jrvpfr7h
+
+espn.schedule.api=https://fantasy.espn.com/apis/v3/games/ffl/seasons/2023?view=proTeamSchedules_wl
+espn.roster.api=http://site.api.espn.com/apis/site/v2/sports/football/nfl/teams/:team_id/roster
 
 spring.flyway.enabled=false
 
